--- a/MinisumoApp/MinisumoApp/Base.lproj/Main.storyboard
+++ b/MinisumoApp/MinisumoApp/Base.lproj/Main.storyboard
@@ -568,10 +568,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <pageControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="jeI-4i-W5v">
-                                <rect key="frame" x="76" y="531" width="168" height="37"/>
+                                <rect key="frame" x="0.0" y="531" width="320" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                 <connections>
-                                    <action selector="pageChanged:" destination="fhk-ci-2HP" eventType="valueChanged" id="VmH-IP-3q7"/>
+                                    <action selector="pageChanged:" destination="fhk-ci-2HP" eventType="valueChanged" id="eMw-1U-GOb"/>
                                 </connections>
                             </pageControl>
                             <scrollView autoresizesSubviews="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" directionalLockEnabled="YES" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="268-gX-g65">
@@ -583,7 +583,7 @@
                                 </connections>
                             </scrollView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.3467078307" blue="0.2498288461" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.42159598168377665" green="0.69676780204871669" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <connections>
                         <outlet property="pageControl" destination="jeI-4i-W5v" id="O1y-bk-aai"/>
