prepared message with algorithm setup

--- a/MinisumoApp/MinisumoApp/AlgorithmView.xib
+++ b/MinisumoApp/MinisumoApp/AlgorithmView.xib
@@ -33,7 +33,7 @@
                     <rect key="frame" x="40" y="378" width="240" height="52"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                    <state key="normal" title="Start"/>
+                    <state key="normal" title="START"/>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="MaxSpeed:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sBl-Jp-VGc">
                     <rect key="frame" x="40" y="240" width="92" height="30"/>
@@ -50,7 +50,7 @@
                     <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                 </textField>
                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ErQ-4x-a9w">
-                    <rect key="frame" x="231" y="281" width="51" height="31"/>
+                    <rect key="frame" x="193" y="281" width="51" height="31"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </switch>
             </subviews>
